--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to Michael Tricoli's homepage
+description: Place for me to keep updated and organized projects
